Fix navbar color on mobile

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -63,6 +63,13 @@
     rgba(255, 255, 255, 0.1),
     rgba(255, 255, 255, 0)
   );
+
+  background-color: rgba(255, 255, 255, 0.1);
+  background-image: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0)
+  );
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
